# Full-Flask-Backend

./: .env_template  .gitignore  LICENSE  README.md  main.py  old-main.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  schemas.py
app/auth/: __init__.py  endpoints.py  models.py  schema.py
app/main/: __init__.py  models.py  schema.py
database/: __init__.py  initialize_dummy.py  triggers.py
database/dummy/: __init__.py  carts.py  categories.py  customers.py  products.py  sales_persons.py  warehouse.py
sales_venv/Scripts/: activate  activate.bat
test_venv/: pyvenv.cfg
test_venv/Scripts/: activate  activate.bat  blueprint-apply  blueprint-create  blueprint-destroy  blueprint-diff  blueprint-list  blueprint-prune  blueprint-pull  blueprint-push  blueprint-rules  blueprint-show  blueprint-show-files  blueprint-show-ignore  blueprint-show-packages  blueprint-show-services  blueprint-show-sources  blueprint-split
