[tool.poetry]
name = "full-flask-backend"
version = "0.1.0"
description = ""
authors = ["jsonnnnn <cjsonnnnn@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altgraph = "0.17.3"
bcrypt = "4.0.1"
blinker = "1.6.2"
blueprint = "3.4.2"
cffi = "1.15.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "40.0.2"
flask = "2.3.2"
flask-cors = "3.0.10"
flask-login = "0.6.2"
flask-marshmallow = "0.15.0"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.1.1"
greenlet = "2.0.2"
importlib-metadata = "6.6.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
marshmallow = "3.19.0"
marshmallow-sqlalchemy = "0.29.0"
mysql = "0.0.3"
mysql-connector = "2.2.9"
mysqlclient = "2.1.1"
packaging = "23.1"
pefile = "2023.2.7"
pycparser = "2.21"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
